[tool.poetry]
name = "aio_typesense"
version = "0.1.0"
description = "Async library for Typesense"
readme = "README.md"
repository = "https://github.com/devtud/aio_typesense"
homepage = "https://github.com/devtud/aio_typesense"
authors = ["devtud <devtud@gmail.com>"]
keywords = ["asyncio", "typesense"]
include = ["README.md"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^=0.16.1"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.1"}
docker = "^=4.4.1"
black = "^=20.8b1"
aiounittest = {version = "^1.4.0", python = '~3.7'}
typing-extensions = {version = "^3.7.4", python = '~3.7'}

[tool.coverage.paths]
source = ["aio_typesense", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aio_typesense"]

[tool.coverage.report]
fail_under = 100

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
